Added theme styling

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,6 +24,8 @@ export const navMeta = {
         <p class="text-muted-foreground mt-4 text-xl">
             Our website is under construction. Stay tuned for exciting updates!
         </p>
-        <Button href="style-guide" variant="secondary"> Hello </Button>
+        <Button href="style-guide" variant="primary" class="mt-8">
+            Link to Style Guide
+        </Button>
     </div>
 </MainLayout>
