--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,6 +1,7 @@
 ---
 import BaseHead from "@components/BaseHead.astro";
 import type { SeoMeta } from "@components/BaseHead.astro";
+import Navbar from "@components/Navbar.astro";
 import "../styles/global.css";
 import "@tailwindplus/elements";
 
@@ -18,6 +19,9 @@ export interface Props {
 	author?: string;
 	pubDate?: Date;
 }
+
+// Get current path for active nav state
+const currentPath = Astro.url.pathname;
 ---
 
 <!doctype html>
@@ -37,6 +41,7 @@ export interface Props {
 		</script>
 	</head>
 	<body class="bg-background font-sans">
+		<Navbar currentPath={currentPath} />
 		<slot />
 	</body>
 </html>
