--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -17,7 +17,7 @@ const sortedPosts = posts.sort(
 ---
 
 <MainLayout {seoMeta}>
-    <main>
+    <section class="mx-auto w-full max-w-7xl px-4 py-16">
         <h1>Blog Posts</h1>
         <ul>
             {
@@ -36,5 +36,5 @@ const sortedPosts = posts.sort(
                 ))
             }
         </ul>
-    </main>
+    </section>
 </MainLayout>
