--- a/src/pages/style-guide.astro
+++ b/src/pages/style-guide.astro
@@ -10,7 +10,7 @@ export const seoMeta = {
 ---
 
 <MainLayout seoMeta={seoMeta}>
-	<main class="bg-background py-24 sm:py-32">
+	<section class="bg-background py-24 sm:py-32">
 		<div class="mx-auto max-w-7xl px-6 lg:px-8">
 			<div class="mx-auto max-w-3xl">
 				<div class="prose prose-lg dark:prose-invert max-w-none">
@@ -214,5 +214,5 @@ console.log(result); // Output: 8</code>`}></pre>
 				</div>
 			</div>
 		</div>
-	</main>
+	</section>
 </MainLayout>
