--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -10,7 +10,7 @@ export const seoMeta = {
 ---
 
 <MainLayout seoMeta={seoMeta}>
-    <main
+    <div
         class="bg-background grid min-h-full place-items-center px-6 py-24 sm:py-32 lg:px-8"
     >
         <div class="text-center">
@@ -38,5 +38,5 @@ export const seoMeta = {
                 </Button>
             </div>
         </div>
-    </main>
+    </div>
 </MainLayout>
