--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ export const seoMeta = {
 
 <MainLayout {seoMeta}>
     <div
-        class="container mx-auto flex min-h-screen max-w-4xl flex-col items-center justify-center px-4 text-center"
+        class="mx-auto flex min-h-screen w-full max-w-4xl flex-col items-center justify-center px-4 text-center"
     >
         <h1 class="text-5xl font-black">Coming Soon</h1>
         <p class="text-muted-foreground mt-4 text-xl">
